modified the login page and add user image to the nav bar.

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -38,12 +38,16 @@
   }
 }
 
+
+
 .carousel-indicators{
   margin-bottom: 20px;
 }
 
 .item-caption{
   text-align: center;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .carousel-control.left, .carousel-control.right{
