--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,9 +13,32 @@ ul, ol{
 .out, .in{
   float: right;
 }
+
 @media all and (max-width: 767px){
   .out, .in{
     float :left;
+  }
+}
+
+
+.nav .me{
+  width: 120px;
+  box-sizing: border-box;
+}
+
+.user-profile{
+  float: left;
+  width: 40px;
+  height: 40px;
+  margin-top: 5px;
+  margin-right: 5px;
+  border-radius: 20px;
+  border: 2px solid white;
+}
+
+@media all and (max-width: 767px){
+  .user-profile{
+    margin-top: 0px;
   }
 }
 
