--- a/static/css/register.css
+++ b/static/css/register.css
@@ -2,13 +2,14 @@ body{
   background-color: #63C51C;
 }
 
-.container{
-  padding-top: 0px;
+.navbar-inverse{
+  position: static;
 }
 
-form{
-
+.register{
+  margin-top: 10px;
 }
+
 h2{
   text-align: center;
   margin-bottom: 20px;
@@ -58,11 +59,11 @@ input[type="submit"]:hover{
   cursor: pointer;
 }
 
-body > .error{
+.error{
   background-color: #333;
   border-radius: 10px;
-  width: 50%;
-  margin: 80px auto 0px;
+  margin: 10px auto 0;
+  width: 70%;
   text-align: center;
   color: red;
   font-size: 18px;
