--- a/templates/register.html
+++ b/templates/register.html
@@ -11,11 +11,11 @@
      {{ profile_form_errors }}
      {{ user_form_errors }}
    </div>
-   <div class="container">
+   <div class="container register">
      <form class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3"
            id="user_form" method="post" action="/register/" enctype="multipart/form-data">
        {% csrf_token %}
-       <h2>加入悦读网&nbsp;&nbsp;成为爱书者的一员</h2>
+       <h2>加入悦读&nbsp;&nbsp;成为爱书者的一员</h2>
        <label for="id_username">昵称(必填)</label>
        {{ user_form.username }}
        <label for="id_password">密码(必填)</label>
@@ -30,4 +30,6 @@
        <input type="submit" name="submit" value="注册" />
      </form>
    </div>
+{% endblock %}
+{% block footer %}
 {% endblock %}
