--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -75,15 +75,15 @@ h3.label-head{
 .rating .rate{
   font-size: 18px;
 }
-.rating .star{
+.rating .score-star{
   font-size: 18px;
   color: orangered;
 }
 
 .book-remark .share{
   position: fixed;
-  bottom: 0px;
-  right: 0px;
+  bottom: 10px;
+  right: 20px;
   z-index: 5;
 }
 
@@ -100,8 +100,8 @@ h3.label-head{
 
 .rating{
   position: fixed;
-  top: 25%;
-  left: -3px;
+  top: 22%;
+  left: -170px;
   text-align: center;
   display: inline-block;
   width: 200px;
@@ -111,6 +111,11 @@ h3.label-head{
   border-bottom-right-radius: 15px;
   background-color: coral;
   z-index: 5;
+  transition: left 0.1s ease-in;
+}
+
+.rating:hover{
+  left: -3px;
 }
 
 .rate{
