--- a/templates/detail.html
+++ b/templates/detail.html
@@ -83,11 +83,11 @@
   <div class="book-remark">
     <div class="rating">
       <span class="rate">评价</span>
-      <span class="glyphicon glyphicon-star-empty star" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-star-empty star" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-star-empty star" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-star-empty star" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-star-empty star" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-star-empty score-star" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-star-empty score-star" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-star-empty score-star" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-star-empty score-star" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-star-empty score-star" aria-hidden="true"></span>
     </div>
     <div class = "share">
       <a href = "{% url 'note_book' note_book_id=book_detail.book_id %}">写笔记</a>
@@ -147,4 +147,7 @@
     {% endif %}
   </div>
 </div>
+{% endblock %}
+{% block js_link %}
+<script src="{% static 'js/detail.js' %}"></script>
 {% endblock %}
