--- a/templates/note.html
+++ b/templates/note.html
@@ -1,49 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Notes Here</title>
-</head>
-<body>
-    <div>
-        {% if errors %}
-        <ul>
-            {% for error in errors %}
-            <li>{{ error }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-    </div>
+{% extends 'base.html' %}
+{% load staticfiles %}
+{% block title %}写写笔记{% endblock %}
+{% block css_link %}
+  <link rel="stylesheet" href="{% static "css/note.css" %}" />
+{% endblock %}
+{% block search %}
+{% endblock %}
+{% block content %}
+  <div class=".error">
+    {% if errors %}
+    <ul>
+      {% for error in errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+  </div>
 
-    <form action="." method="post">
-        {% csrf_token %}
-
-        <div class="notes_title"><h1>写笔记   <span>《{{note_book_title}}》</span></h1></div>
-        <div class="book_page">页&nbsp;码:
-            <span>第
-                {{form.page}}
-                {{form.page.errors}}
-                页</span>
+  <div class="note container">
+    <form id="note-form" class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1" action="." method="post">
+      {% csrf_token %}
+      <div class="notes_title"><h1>《{{note_book_title}}》— 读书笔记</h1></div>
+      <div class="book_page">页&nbsp;码:
+        <span>第
+            {{form.page}}
+            {{form.page.errors}}
+            页</span>
+      </div>
+      <div class="chapter">章&nbsp;节&nbsp;名:
+        {{form.chapter}}
+        {{form.chapter.errors}}
+      </div>
+      <div class="item_content">
+        <label>笔记内容: </label>
+        <div class="editor">
+            {{form.content}}
+            {{form.content.errors}}
         </div>
-        <br/>
-        <div class="chapter">章&nbsp;节&nbsp;名
-            {{form.chapter}}
-            {{form.chapter.errors}}
-        </div>
-        <br/>
-        <div class="item_content">
-            <label>笔记内容: </label>
-            <div class="editor">
-                {{form.content}}
-                {{form.content.errors}}
-            </div>
-        </div>
-        <br/>
-        <div class="item_submit">
-            <span class="bn_flat">
-                <input value="发表" name="publish" type="submit">
-            </span>
-        </div>
+      </div>
+      <div class="item_submit">
+        <span class="bn_flat">
+            <input class="btn btn-primary" value="发表" name="publish" type="submit">
+        </span>
+      </div>
     </form>
-</body>
-</html>
+  </div>
+{% endblock %}
+{% block footer %}
+{% endblock %}
+{% block js_link %}
+<script src="{% static 'js/note.js' %}"></script>
+{% endblock %}
