--- a/static/css/comment.css
+++ b/static/css/comment.css
@@ -1,64 +1,31 @@
-#left{
-    width: 15%;
-    height: 70%;
-    float:left;
+body{
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffb76b+0,ffa73d+25,ff7c00+76,ff7f04+100;Orange+Gloss */
+  background: #eaefb5; /* Old browsers */
+  background: -moz-linear-gradient(top,  #eaefb5 0%, #e1e9a0 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #eaefb5 0%,#e1e9a0 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #eaefb5 0%,#e1e9a0 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eaefb5', endColorstr='#e1e9a0',GradientType=0 ); /* IE6-9 */
 }
-#middle{
-    width: 50%;
-    height: 70%;
-    float:left;
+
+.navbar-inverse{
+  position: static;
 }
-#right{
-    width:30%;
-    height:70%;
-    float:left;
+
+form > div{
+  margin: 20px auto;
 }
-#timu{
-    width: 582px;
-    margin-top: 5px;
-    padding: 3px;
-    line-height: 1.62;
-    border: 1px solid #ccc;
-    font-size: 14px;
+#comment label{
+  font-size: 18px;
+  font-weight: normal;
+  display: block;
 }
+
+#notshow1, #notshow2{
+  display: none;
+}
+
 #zhengwen{
-    width: 582px;
-    margin-top: 5px;
-    padding: 3px;
-    line-height: 1.62;
-    border: 1px solid #ccc;
-    font-size: 14px;
-    height: 300px;
-}
-.field{
-    margin-left: 2px;
-}
-.ch{
-    margin-left: 2px;
-    margin-right: 4px;
-    margin-bottom: 18px;
-}
-#cancel_review{
-    margin-top: 15px;
-    height:20px;
-    width:30px;
-}
-#publish_review{
-    background-color: green;
-    margin-top: 15px;
-    height:20px;
-    width:30px;
-}
-#footer{
-    clear:both;
-    color:#999;
-    font-family: cursive;
-    font-size: 12px;
-    margin-top: 10px;
-}
-#notshow1{
-    display: none;
-}
-#notshow2{
-    display: none;
+  display: block;
+  width: 100%;
+  height: 200px;
 }
