--- a/templates/detail.html
+++ b/templates/detail.html
@@ -34,38 +34,38 @@
       <div class="score_rule">
         <div class="five_star">
           <div class="star">5星</div>
-          <div class="perc">62.8%</div>
+          <div class="perc">{{ five_star }}</div>
           <div class="progress">
-            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="62.8" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 62.8%"></div>
+            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar"  aria-valuemin="0" aria-valuemax="1" style="min-width: 2em; width: {{ five_star }}"></div>
           </div>
         </div>
         <div class="four_star">
           <div class="star">4星</div>
-          <div class="perc">29.0%</div>
+          <div class="perc">{{ four_star }}</div>
           <div class="progress">
-            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="29.0" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 29.0%"></div>
+            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar"  aria-valuemin="0" aria-valuemax="1" style="min-width: 2em; width: {{ four_star }}"></div>
           </div>
         </div>
         <div class="there_star">
           <div class="star">3星</div>
-          <div class="perc">8.4%</div>
+          <div class="perc">{{ there_star }}</div>
           <div class="progress">
-            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="8.4" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 8.4%"></div>
+            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuemin="0" aria-valuemax="1" style="min-width: 2em; width: {{ there_star }}"></div>
           </div>
         </div>
         <div class="two_star">
           <div class="star">2星</div>
-          <div class="perc">0.6%</div>
+          <div class="perc">{{ two_star }}</div>
           <div class="progress">
-            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0.6" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 0.6%"></div>
+            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuemin="0" aria-valuemax="1" style="min-width: 2em; width: {{ two_star }}"></div>
           </div>
         </div>
         <div class="one_star">
           <div class="star">1星</div>
-          <div class="perc">0.2%</div>
+          <div class="perc">{{ one_star }}</div>
           <div class="progress">
             <div>
-              <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0.2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 0.2%"></div>
+              <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar"  aria-valuemin="0" aria-valuemax="1" style="min-width: 2em; width: {{ one_star }}"></div>
             </div>
           </div>
         </div>
@@ -76,19 +76,11 @@
   <div class="label-set row">
     {% for label in book_labels %}
     <div class="book-label">
-      <a href="...">{{ label }}</a>
+      <a href = "{% url 'laber_search' laber_title=label %}">{{ label }}</a>
     </div>
     {% endfor %}
   </div>
   <div class="book-remark">
-    <div class="rating">
-      <span class="rate">评价</span>
-      <span class="glyphicon glyphicon-star-empty score-star" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-star-empty score-star" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-star-empty score-star" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-star-empty score-star" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-star-empty score-star" aria-hidden="true"></span>
-    </div>
     <div class = "share">
       <a href = "{% url 'note_book' note_book_id=book_detail.book_id %}">写笔记</a>
       <a href = "{% url 'comment' book_id=book_detail.book_id %}">写书评</a>
