--- a/static/css/account.css
+++ b/static/css/account.css
@@ -1,29 +1,60 @@
-form{
-    width: 300px;
-    padding: 20px;
-    border: 6px solid palevioletred;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+body{
+  background-color: rgb(0, 215, 215);
 }
+
+.navbar-inverse{
+  position: static;
+}
+
+.account{
+  margin-top: 10px;
+}
+
 h2{
-    text-align: center;
+  text-align: center;
+  margin-bottom: 20px;
 }
-input{
-    display: block;
-    width: 100%;
-    margin: 20px 0;
-    height: 30px;
-    border: 1px solid palevioletred;
+
+label{
+  display: block;
+  text-align: left;
 }
+
+input[type="text"], input[type="email"], input[type="password"]{
+  display: block;
+  width: 100%;
+  margin: 20px 0;
+  height: 30px;
+  border-radius: 5px;
+  padding-left: 15px;
+  border: 1px solid black;
+}
+
+input[type="text"]:hover, input[type="email"]:hover, input[type="password"]:hover{
+  border: 1px solid blue;
+  cursor: pointer;
+}
+
+input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus{
+  border: 1px solid blue;
+  cursor: text;
+}
+
 input[type="file"]{
-    border: none
+  margin: 20px 0;
 }
 input[type="submit"]{
-    border: none;
-    background-color: rgba(219, 112, 147, 0.5);
+  display: block;
+  width: 100%;
+  margin: 20px 0 40px;
+  height: 30px;
+  border: none;
+  background-color: white;
+  font-size: 18px;
 }
+
 input[type="submit"]:hover{
-    background-color: rgba(219, 112, 147, 1);
+  background-color: #333;
+  color: white;
+  cursor: pointer;
 }
