--- a/templates/home.html
+++ b/templates/home.html
@@ -106,7 +106,7 @@
   <div class='row famous-book-section'>
     <h3 class="famous-head">最受欢迎图书榜</h3>
       {% for book in book_list %}
-      <div class="post-title col-xs-4 col-sm-3 col-lg-2 col-xs-offset-1">
+      <div class="post-title col-xs-4 col-sm-3 col-lg-2 col-xs-offset-1 hidden">
         <a href="{% url 'detail' book_id=book.book_id %}">
           <img class="cover img-responsive center-block" src={{book.cover_url}}>
         </a>
@@ -117,5 +117,45 @@
       </div>
       {% endfor %}
   </div>
+  <nav class="row">
+    <ul class="pagination">
+    </ul>
+  </nav>
 </div>
+{% endblock %}
+
+{% block js_link %}
+{% if book_list %}
+<script>
+  $(function () {
+    // prepare the pagination button
+    var bookNum = {{book_list|length}};
+    var numPerPage = 4;
+    var pageNum = Math.ceil(bookNum / numPerPage);
+    var textHtml = '';
+    for (var i = 1; i <= pageNum; i++){
+      textHtml += "<li><a href='javascript:;'>" + i + "</a></li>";
+    }
+    var $pagination = $(".pagination");
+    $pagination.html(textHtml).children("li").eq(0).addClass("active");
+
+    // prepare the books that first shows
+    var $paginationItem = $pagination.children("li");
+    var $bookItem = $('.famous-book-section').children('div');
+    for (var j = 0; j < numPerPage; j++){
+      $bookItem.eq(j).removeClass("hidden");
+      console.log(j);
+    }
+    $paginationItem.click(function(){
+      var order = $paginationItem.index($(this));
+      $paginationItem.removeClass("active");
+      $(this).addClass("active");
+      $bookItem.addClass("hidden");
+      for (j = order * numPerPage; j < (order + 1) * numPerPage; j++){
+        $bookItem.eq(j).removeClass("hidden");
+      }
+    });
+  })
+</script>
+{% endif %}
 {% endblock %}
