a online-version of reading website

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -149,4 +149,9 @@
 {% endblock %}
 {% block js_link %}
 <script src="{% static 'js/detail.js' %}"></script>
+<script type="text/javascript" id="bdshare_js" data="type=slide&img=7&uid=354335" ></script>
+<script type="text/javascript" id="bdshell_js"></script>
+<script type="text/javascript">
+    document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + new Date().getHours();
+</script>
 {% endblock %}
