--- a/templates/detail.html
+++ b/templates/detail.html
@@ -11,6 +11,15 @@
 {% endblock %}
 
 {% block content %}
+<!-- JiaThis Button BEGIN -->
+<div id="ckepop">
+  <span class="jiathis_txt">分享到：</span>
+  <a class="jiathis_button_weixin">微信</a>
+  <!--
+  更多
+<a class="jiathis_counter_style"></a>-->
+</div>
+<!-- JiaThis Button END -->
 <div class='container content'>
   <div class='book-intro row'>
     <div class="book-picture col-xs-12 col-sm-4">
@@ -154,4 +163,5 @@
 <script type="text/javascript">
     document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + new Date().getHours();
 </script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1" charset="utf-8"></script>
 {% endblock %}
