--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="description" content="悦读网，致力于为您提供高品质图书信息">
     <meta name="author" content="杨景，于科屹，马子俊">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="shortcut icon" href="{% static 'logo/favicon.ico' %}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="{% static 'css/base.css' %}"/>
