--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,9 @@
     <div class="row">
       <div class="col-xs-12">悦读网</div>
       <div class="col-xs-12">Powered By 杨景 于科屹 马子俊</div>
-      <div class="col-xs-12">本站代码详见 https://github.com/YJGit/reading_website</div>
+      <div class="col-xs-12">本站代码详见 
+	    <a href="https://github.com/YJGit/reading_website">https://github.com/YJGit/reading_website</a>
+	  </div>
     </div>
   </footer>
 {% endblock %}
